@@ -1,6 +1,7 @@
 2011-02-21  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Added file meta data fields to schema.xml
+	* Changed the flash message for failed connections in the index report to show the server connection's parameters
 
 2011-01-31  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
